--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,24 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(e) {
+    let audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    let key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if (!audio) return;
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  }
 
+  function endTransition(e) {
+    if (e.propertyName !== "transform") return;
+    this.classList.remove('playing');
+  };
+
+  let keys = document.querySelectorAll('.key');
+
+  keys.forEach( key => key.addEventListener("transitionend", endTransition));
+  window.addEventListener("keydown", playSound)
 </script>
 
 
