--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,28 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
     }
 
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
 
+    function setTime() {
+      const now = new Date();
+
+      const hours = now.getHours();
+      const minutes = now.getMinutes();
+      const seconds = now.getSeconds();
+      console.log(seconds);
+
+      const secondDegrees = (seconds / 60 ) * 360 + 90;
+
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+    }
+
+    setInterval(setTime, 1000);
 
   </script>
 </body>
