--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -63,12 +63,17 @@
       position: absolute;
       top:50%;
       transform-origin: 100%;
+      transition: .07s;
+      transition-timing-function: cubic-bezier(0, 1.82, 0.26, 1.43);
     }
 
   </style>
 
   <script>
     const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
 
     function setTime() {
       const now = new Date();
@@ -76,11 +81,15 @@
       const hours = now.getHours();
       const minutes = now.getMinutes();
       const seconds = now.getSeconds();
-      console.log(seconds);
 
       const secondDegrees = (seconds / 60 ) * 360 + 90;
+      const minuteDegrees = (minutes / 60 ) * 360 + 90;
+      const hourDegrees = (hours / 24) * 360 + 90;
 
       secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
     }
 
     setInterval(setTime, 1000);
